--- a/Python/ML_LinReg/PreProc/LinRegPreProcess.ipynb
+++ b/Python/ML_LinReg/PreProc/LinRegPreProcess.ipynb
@@ -7,7 +7,31 @@
    "source": [
     "### Design Summary\n",
     "\n",
-    "This Python script implements an end-to-end, decision-driven preprocessing pipeline for tabular machine learning data. It systematically evaluates numeric and categorical features for missingness, distributional issues, cardinality, encoding strategy, and multicollinearity, using target-aware heuristics where appropriate. Rather than performing silent transformations, the script records each preprocessing decision—imputation, transformation, scaling, encoding, or feature removal—into structured summary artifacts, enabling transparency, reproducibility, and defensible feature engineering. Collectively, these recommendations are designed to guide users in constructing robust and interpretable data pipelines specifically suited for Linear Regression modeling.\n",
+    "This Python script addresses a common bottleneck in tabular machine learning workflows, particularly when datasets have many features or high-cardinality categorical variables:  \n",
+    "\n",
+    "**Key problems it solves:**  \n",
+    "- Systematically analyzes numeric and categorical features for:  \n",
+    "  - Missing values and imputation strategy  \n",
+    "  - Outliers and distributional skew  \n",
+    "  - Feature scaling  \n",
+    "  - Cardinality and encoding decisions  \n",
+    "  - Multicollinearity between features  \n",
+    "- Reduces feature explosion caused by one-hot encoding of high-cardinality categorical variables  \n",
+    "- Ensures target-aware preprocessing decisions to prevent information leakage  \n",
+    "\n",
+    "**What the script provides:**  \n",
+    "- Detailed, structured summary artifacts documenting each preprocessing recommendation  \n",
+    "- Transparency and reproducibility for all decisions, including:  \n",
+    "  - Imputation method  \n",
+    "  - Distributional transformations  \n",
+    "  - Scaling  \n",
+    "  - Encoding  \n",
+    "  - Feature removal  \n",
+    "- Guidance for constructing robust, interpretable data pipelines specifically for Linear Regression modeling  \n",
+    "\n",
+    "**Outcome:**  \n",
+    "Users gain actionable, defensible preprocessing guidance that scales to large or complex datasets, helping them build efficient pipelines without manually inspecting every feature.\n",
+    "\n",
     "\n",
     "---"
    ]
@@ -39,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "0d918292",
    "metadata": {},
    "outputs": [],
@@ -68,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "1496c197",
    "metadata": {},
    "outputs": [],
@@ -91,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "55f0a7ee",
    "metadata": {},
    "outputs": [],
@@ -121,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "b843d45a",
    "metadata": {},
    "outputs": [],
@@ -154,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "bccabfe7",
    "metadata": {},
    "outputs": [],
@@ -184,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "8e4c125f",
    "metadata": {},
    "outputs": [],
@@ -278,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "1ecb5afb",
    "metadata": {},
    "outputs": [],
@@ -463,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "4dc8b8a5",
    "metadata": {},
    "outputs": [],
@@ -719,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "f5c75166",
    "metadata": {},
    "outputs": [],
