--- a/Python/ML_LinReg/PreProc/LinRegPreProcess.ipynb
+++ b/Python/ML_LinReg/PreProc/LinRegPreProcess.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Design Summary\n",
     "\n",
-    "This Python script addresses a common bottleneck in tabular machine learning workflows, particularly when datasets have many features or high-cardinality categorical variables:  \n",
+    "This Python script addresses a common bottleneck in tabular machine learning workflows, Exploratory Data Analysis (EDA),  particularly when datasets have many features or high-cardinality categorical variables:  \n",
     "\n",
     "**Key problems it solves:**  \n",
     "- Systematically analyzes numeric and categorical features for:  \n",
@@ -30,9 +30,9 @@
     "- Guidance for constructing robust, interpretable data pipelines specifically for Linear Regression modeling  \n",
     "\n",
     "**Outcome:**  \n",
-    "Users gain actionable, defensible preprocessing guidance that scales to large or complex datasets, helping them build efficient pipelines without manually inspecting every feature.\n",
+    "Users gain actionable, defensible preprocessing guidance, (as a result of automated EDA), that scales to large or complex datasets, helping them build efficient pipelines without manually inspecting every feature.\n",
     "\n",
-    "\n",
+    "Note: The architecture, workflow, and functionality of this project are entirely my own. Generative AI was used for some coding tasks, like formatting and debugging. In an effort to modernize my approach and stay current with emerging technologies, I treat AI as a collaborative partner to enhance productivity and creativity, while all key decisions, project structure, and underlying logic remain under human control.\n",
     "---"
    ]
   },
