changed name and summary

--- a/Python/ML_LinReg/PreProc/LinRegEDA.ipynb
+++ b/Python/ML_LinReg/PreProc/LinRegEDA.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Design Summary\n",
     "\n",
-    "This Python script addresses a common bottleneck in tabular machine learning workflows, Exploratory Data Analysis (EDA),  particularly when datasets have many features or high-cardinality categorical variables:  \n",
+    "This Python script addresses a common bottleneck in tabular machine learning workflows, **Exploratory Data Analysis (EDA)**,  particularly when datasets have many features or high-cardinality categorical variables:  \n",
     "\n",
     "**Key problems it solves:**  \n",
     "- Systematically analyzes numeric and categorical features for:  \n",
