--- a/Python/ML_LinReg/EDA/LinRegEDA.ipynb
+++ b/Python/ML_LinReg/EDA/LinRegEDA.ipynb
@@ -30,9 +30,10 @@
     "- Guidance for constructing robust, interpretable data pipelines specifically for Linear Regression modeling  \n",
     "\n",
     "**Outcome:**  \n",
-    "Users gain actionable, defensible preprocessing guidance, (as a result of automated EDA), that scales to large or complex datasets, helping them build efficient pipelines without manually inspecting every feature.\n",
+    "Users gain actionable, defensible preprocessing guidance, (as a result of automated EDA), that scales to large or complex datasets, helping them build efficient pipelines without manually inspecting every feature. \n",
     "\n",
     "Note: The architecture, workflow, and functionality of this project are entirely my own. Generative AI was used for some coding tasks, like formatting and debugging. In an effort to modernize my approach and stay current with emerging technologies, I treat AI as a collaborative partner to enhance productivity and creativity, while all key decisions, project structure, and underlying logic remain under human control.\n",
+    "\n",
     "---"
    ]
   },
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "0d918292",
    "metadata": {},
    "outputs": [],
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "1496c197",
    "metadata": {},
    "outputs": [],
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "55f0a7ee",
    "metadata": {},
    "outputs": [],
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "b843d45a",
    "metadata": {},
    "outputs": [],
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "bccabfe7",
    "metadata": {},
    "outputs": [],
@@ -208,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "8e4c125f",
    "metadata": {},
    "outputs": [],
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "1ecb5afb",
    "metadata": {},
    "outputs": [],
@@ -417,7 +418,7 @@
     "    })\n",
     "\n",
     "# ----- Export to CSV -----\n",
-    "pd.DataFrame(numeric_results).to_csv(\"numeric_preprocessing_summary.csv\", index=False)"
+    "pd.DataFrame(numeric_results).to_csv(\"numeric_EDA_summary.csv\", index=False)"
    ]
   },
   {
@@ -487,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "4dc8b8a5",
    "metadata": {},
    "outputs": [],
@@ -637,7 +638,7 @@
     "    })\n",
     "\n",
     "# ---------- Export to CSV ----------\n",
-    "pd.DataFrame(categorical_results).to_csv(\"categorical_preprocessing_summary.csv\", index=False)"
+    "pd.DataFrame(categorical_results).to_csv(\"categorical_EDA_summary.csv\", index=False)"
    ]
   },
   {
@@ -743,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "f5c75166",
    "metadata": {},
    "outputs": [],
@@ -752,7 +753,7 @@
     "\n",
     "# Threshold for high correlation\n",
     "corr_threshold = 0.8\n",
-    "recommendation_file_csv = \"multicollinearity_Summary.csv\"\n",
+    "recommendation_file_csv = \"multicollinearity_EDA_Summary.csv\"\n",
     "\n",
     "\n",
     "# Prepare categorical imputation lookup\n",
