--- a/Python/ML_LinReg/EDA/LinRegEDA.ipynb
+++ b/Python/ML_LinReg/EDA/LinRegEDA.ipynb
@@ -298,7 +298,7 @@
     "\n",
     "- All feature metrics, decisions, and justifications are consolidated into a **Pandas DataFrame**.\n",
     "\n",
-    "- The DataFrame is exported as numeric_preprocessing_summary.csv for documentation and review, providing a **complete, reproducible record of numeric preprocessing recommendations**."
+    "- The DataFrame is exported as numeric_EDA_summary.csv for documentation and review, providing a **complete, reproducible record of numeric preprocessing recommendations**."
    ]
   },
   {
@@ -480,7 +480,7 @@
     "This ensures **every recommendation is transparent** and tied to specific feature properties.\n",
     "\n",
     "#### 6. Summary Table and Export\n",
-    "- All metrics, decisions, and justifications are consolidated into a **Pandas DataFrame** (`categorical_preprocessing_summary`).  \n",
+    "- All metrics, decisions, and justifications are consolidated into a **Pandas DataFrame** (`categorical_EDA_summary`).  \n",
     "- The summary is exported as a CSV file for documentation, reporting, and review.  \n",
     "\n",
     "This provides a **complete, reproducible record of categorical preprocessing recommendations** without altering the original dataset.\n"
@@ -732,7 +732,7 @@
     "This explicitly resolves **linear dependence introduced by full one-hot encoding**.\n",
     "\n",
     "#### 10. Output Artifact\n",
-    "- All findings are written to a single CSV file:\n",
+    "- All findings are written to a single CSV file (multicollinearity_EDA_Summary):\n",
     "  - Section (context)\n",
     "  - Feature pair\n",
     "  - Correlation between features\n",
